feat: add and refactor test classes